--- a/src/picker/assets/scss/style.scss
+++ b/src/picker/assets/scss/style.scss
@@ -377,7 +377,7 @@
 }
 
 .#{$prefix}addon-list-item {
-  width: (1/3)*100%;
+  width: 0.33*100%;
   text-align: center;
   font-size: 14px;
   height: 44px;
