--- a/src/picker/assets/scss/style.scss
+++ b/src/picker/assets/scss/style.scss
@@ -316,7 +316,7 @@
   left: $month-label-height;
   right: $month-label-height;
   overflow: hidden;
-  width: 95px;
+  width: auto;
   margin-left: auto;
   margin-right: auto;
   line-height: $month-label-height;
